--- a/src/components/body/index.css
+++ b/src/components/body/index.css
@@ -1,24 +1,65 @@
 .chat-body-container {
     margin: 1%;
+    padding-top: 6%;
+    display: flex;
+    flex-direction: column;
     background-color: rgba(239,242,249,255);
     width: 30%;
-    height: 95%;
+    height: 80%;
     position: absolute;
     right: 0;
     border-radius: 30px;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
 }
-.message-container {
+.client-message-container {
     margin-top: 20%;
-    margin-left: 1%;
+    display: flex;
+    position: absolute;
+    right: 1.5%;
     width: 80%;
     background-color: rgba(23,185,170,255);
-    border-radius: 25px;
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
+    border-radius: 20px 30px 0px 20px;
     padding: 10px;
-}
-.message-container p {
     color: rgba(255, 255, 255, 255);
     font-size: 1rem;
     font-weight: bold;
     font-family: Georgia, serif;
 }
+
+.client-logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 5px;
+    padding: 3px;
+    background-color: rgba(13,147,135,255);
+    border-radius: 8px;
+  }
+  .chatbot-message-container {
+    display: flex;
+    position: absolute;
+    left: 1.5%;
+    width: 80%;
+    background-color: rgba(227,232,241,255);
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
+    border-radius: 30px 20px 20px 0px;
+    padding: 10px;
+    color: rgba(255, 255, 255, 255);
+    font-size: 1rem;
+    font-weight: bold;
+    font-family: Georgia, serif;
+    color: black;
+  }
+
+  .bot-logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 5px;
+    padding: 3px;
+    margin-right: 10px;
+    background-color: rgba(255,254,255,255);
+    border-radius: 8px;
+  }
+  
