--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -1,40 +1,71 @@
-* {
+  *{
+    font-family: 'Roboto', sans-serif;
+  }
+
+  .header-container {
+    width: 100%;
+    height: 10%;
+    padding-top: 2%;
+    padding-bottom: 2%;    
+    background-color: #fffefe;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 10px 10px 10px rgba(0.1, 0.1, 0.1, 0.1);
+  }
+
+  .close-button-div{
+    background-color: #f2f5f8;
+    width: 10%;
+    height: 70%;
+    border-radius: 15%;
+    display: flex;
+    justify-content: center;
+    align-items: center;  
+  }
+
+  .header-title{
+    width: 65%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+  }
+
+  .bot-name{
+    font-size: 150%;
+    font-weight: bold;
+    width: 100%;
     margin: 0;
     padding: 0;
+    margin-left:5%;
   }
-  
-  .header-container {
-    margin-top: 1%;
-    margin-right: 1%;
-    background-color: rgb(255, 255, 255);
-    width: 27.8%;
-    height: 10%;
+
+  .bot-intro{
+    font-size: 100%;
+    font-weight:400;
+    margin: 0;
+    padding: 0;
+    margin-left:5%
+  }
+
+  .gpt-cloud{
+    background-color: #c6fcf1;
+    color: #70d4c2;
+    font-size: 70%;
+    margin-left: 2%;
+    margin-bottom: auto;
+    padding: 2%;
+    border-radius: 15%;
+  }
+
+  .search-button-div{
+    background-color: #f2f5f8;
+    width: 10%;
+    height: 70%;
+    border-radius: 15%;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    color: rgba(255, 254, 254, 255);
-    border-radius: 30px;
-    position: absolute;
-    right: 0;
-    padding: 0 15px;
+    justify-content: center;
+    align-items: center;  
   }
-  
-  .header-container h1 {
-    font-family: sans-serif;
-    font-size: x-large;
-    color: rgba(23, 27, 38, 255);
-  }
-  
-  .close-button {
-    background: none;
-    border: none;
-    font-size: 2rem;
-    color: rgba(23, 27, 38, 255);
-    cursor: pointer;
-    outline: none;
-  }
-  
-  .close-button:hover {
-    color: red;
-  }
-  
