--- a/src/components/body/index.css
+++ b/src/components/body/index.css
@@ -1,14 +1,11 @@
-.chat-body-container {
+.body-container {
     margin: 1%;
     padding-top: 6%;
     display: flex;
     flex-direction: column;
     background-color: rgba(239,242,249,255);
-    width: 30%;
+    width: 100%;
     height: 80%;
-    position: absolute;
-    right: 0;
-    border-radius: 30px;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
 }
 .client-message-container {
