--- a/src/components/body/index.css
+++ b/src/components/body/index.css
@@ -1,62 +1,74 @@
 .body-container {
-    margin: 1%;
-    padding-top: 6%;
-    display: flex;
-    flex-direction: column;
-    background-color: rgba(239,242,249,255);
-    width: 100%;
-    height: 80%;
-    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
+  margin: 1%;
+  padding-top: 6%;
+  padding-right: 3%;
+  padding-left: 3%;
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(239, 242, 249, 255);
+  width: 100%;
+  height: 80%;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
 }
+
 .client-message-container {
-    margin-top: 20%;
-    display: flex;
-    position: absolute;
-    right: 1.5%;
-    width: 80%;
-    background-color: rgba(23,185,170,255);
-    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
-    border-radius: 20px 30px 0px 20px;
-    padding: 10px;
-    color: rgba(255, 255, 255, 255);
-    font-size: 1rem;
-    font-weight: bold;
-    font-family: Georgia, serif;
+  margin-top: 5%;
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 80%;
+  background-color: rgba(23, 185, 170, 255);
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
+  border-radius: 20px 30px 0px 20px;
+  padding: 10px;
+  color: rgba(255, 255, 255, 255);
+  font-size: 80%;
+  font-weight: bold;
+  font-family: Georgia, serif;
 }
 
-.client-logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 5px;
-    padding: 3px;
-    background-color: rgba(13,147,135,255);
-    border-radius: 8px;
-  }
-  .chatbot-message-container {
-    display: flex;
-    position: absolute;
-    left: 1.5%;
-    width: 80%;
-    background-color: rgba(227,232,241,255);
-    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
-    border-radius: 30px 20px 20px 0px;
-    padding: 10px;
-    color: rgba(255, 255, 255, 255);
-    font-size: 1rem;
-    font-weight: bold;
-    font-family: Georgia, serif;
-    color: black;
-  }
+.client-logo-div {
+  display: flex;
+  height: fit-content;
+  padding:1% 1.5% 1% 1.5%  ;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(13, 147, 135, 255);
+  border-radius: 8px;
+}
 
-  .bot-logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 5px;
-    padding: 3px;
-    margin-right: 10px;
-    background-color: rgba(255,254,255,255);
-    border-radius: 8px;
-  }
-  
+.client-message{
+  margin-right: 1%;
+}
+
+.chatbot-message-container {
+  display: flex;
+  width: fit-content;
+  max-width: 90%;
+  background-color: rgba(227, 232, 241, 255);
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
+  border-radius: 30px 20px 20px 0px;
+  padding: 10px;
+  color: rgba(255, 255, 255, 255);
+  font-size: 80%;
+  font-weight: bold;
+  font-family: Georgia, serif;
+  color: black;
+}
+
+.bot-logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 5px;
+  padding: 3px;
+  margin-right: 10px;
+  background-color: rgba(255, 254, 255, 255);
+  border-radius: 8px;
+}
+
+.bot-message{
+  margin-left: 1%;
+  width: fit-content;
+}
