--- a/src/components/chatbot/index.css
+++ b/src/components/chatbot/index.css
@@ -12,3 +12,30 @@
     bottom:10%;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
+
+@media (max-width: 1200px) {
+    .chatbot-container {
+        width: 30%;
+    }
+}
+
+@media (max-width: 992px) {
+    .chatbot-container {
+        width: 40%;
+    }
+}
+
+@media (max-width: 768px) {
+    .chatbot-container {
+        width: 40%;
+    }
+}
+
+@media (max-width: 576px) {
+    .chatbot-container {
+        width: 90%;
+        right: 5%;
+        bottom: 5%;
+        border-radius: 10px;
+    }
+}
