--- a/src/components/footer/index.css
+++ b/src/components/footer/index.css
@@ -1,50 +1,61 @@
-.footer-container{
+.footer-container {
     width: 100%;
     height: 10%;
     display: flex;
     justify-content: center;
     align-items: center;
     box-shadow: 0 -10px 10px rgba(0, 0, 0, 0.1);
-
-    /* background-color: rgb(255, 255, 255); */
 }
 
-.input-field-div{
-    width:70%;
+/* Match the chatbot container's border-radius */
+.input-field-div {
+    width: 70%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    border-top-left-radius: 5%;
+    border-bottom-left-radius: 5%;
+    overflow: hidden;
 }
 
-.input-field-div input{
+.input-field-div input {
     width: 90%;
-    border-top-left-radius: 10%;
-    border-bottom-left-radius: 10%;
-    text-align: center;
-    outline: none;
     height: 80%;
     border: none;
+    outline: none;
     font-size: 100%;
-    background-color: #f2f5f8;
+    text-align: center;
+    border-top-left-radius: 5%;
+    border-bottom-left-radius: 5%;
 }
 
-.send-button-div{
+/* Send button should match right-side border-radius */
+.send-button-div {
     width: 20%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    border-top-right-radius: 5%;
+    border-bottom-right-radius: 5%;
+    overflow: hidden;
 }
 
-.send-button-inner-div{
+.send-button-inner-div {
     width: 90%;
     height: 80%;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #f2f5f8;
-    border-top-right-radius: 10%;
-    border-bottom-right-radius: 10%;
+    border-top-right-radius: 5%;
+    border-bottom-right-radius: 5%;
+}
+.send-icon {
+    cursor: pointer;
+    transition: transform 0.2s ease-in-out;
 }
 
+.send-icon:hover {
+    transform: scale(1.2); /* Increases the size by 20% when hovered */
+}
