--- a/src/components/body/index.css
+++ b/src/components/body/index.css
@@ -8,12 +8,12 @@
   background-color: rgba(239, 242, 249, 255);
   width: 100%;
   height: 80%;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
 }
 
 .client-message-container {
   margin-top: 5%;
   margin-left: auto;
+  margin-right: 1.5%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -21,7 +21,7 @@
   background-color: rgba(23, 185, 170, 255);
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
   border-radius: 20px 30px 0px 20px;
-  padding: 10px;
+  padding: 1.5% 2.5% 1% 2.5%;
   color: rgba(255, 255, 255, 255);
   font-size: 80%;
   font-weight: bold;
@@ -31,7 +31,7 @@
 .client-logo-div {
   display: flex;
   height: fit-content;
-  padding:1% 1.5% 1% 1.5%  ;
+  padding: 2.5% 2% 2.5% 2%;
   justify-content: center;
   align-items: center;
   background-color: rgba(13, 147, 135, 255);
@@ -46,10 +46,11 @@
   display: flex;
   width: fit-content;
   max-width: 90%;
+  margin-left: 1.5%;
   background-color: rgba(227, 232, 241, 255);
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
   border-radius: 30px 20px 20px 0px;
-  padding: 10px;
+  padding: 1.5% 2.5% 1% 2.5%;
   color: rgba(255, 255, 255, 255);
   font-size: 80%;
   font-weight: bold;
@@ -62,7 +63,7 @@
   justify-content: center;
   align-items: center;
   margin: 5px;
-  padding: 3px;
+  padding: 1% 1.5% 1% 1.5%;
   margin-right: 10px;
   background-color: rgba(255, 254, 255, 255);
   border-radius: 8px;
