--- a/src/components/chatbot/index.css
+++ b/src/components/chatbot/index.css
@@ -1,4 +1,5 @@
-.chatbot-container{
+/* index.css */
+.chatbot-container {
     height: 80%;
     width: 25%;
     border-radius: 5%;
@@ -6,11 +7,41 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    position: absolute;
+    position: fixed; /* Changed from absolute to fixed */
     overflow: hidden;
-    right:3%;
-    bottom:10%;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    right: 3%;
+    bottom: 10%;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 4px 8px;
+    transform: scale(0); /* Added for scaling animation */
+    transform-origin: bottom right; /* Added for scaling from bottom right */
+    transition: transform 0.3s ease-in-out; /* Added for smooth animation */
+}
+
+.chatbot-container.visible {
+    transform: scale(1); /* Scale up when visible */
+}
+
+.chatbot-toggle-button {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background-color: rgba(23, 185, 170, 255);
+    color: white;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+    transition: background-color 0.3s ease;
+}
+
+.chatbot-toggle-button:hover {
+    background-color: white;
+    color:rgba(23, 185, 170, 255) !important; 
 }
 
 @media (max-width: 1200px) {
@@ -22,18 +53,21 @@
 @media (max-width: 992px) {
     .chatbot-container {
         width: 40%;
+        height: 85%;
     }
 }
 
 @media (max-width: 768px) {
     .chatbot-container {
         width: 40%;
+        height: 85%;
     }
 }
 
 @media (max-width: 576px) {
     .chatbot-container {
         width: 90%;
+        height: 85%;
         right: 5%;
         bottom: 5%;
         border-radius: 10px;
