--- a/src/components/chatbot/components/body/index.css
+++ b/src/components/chatbot/components/body/index.css
@@ -17,15 +17,29 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 80%;
+  text-align: center;
+  width: fit-content;
+  max-width: 80%;
+  white-space: nowrap;
+  padding: 1.5% 5% 1.5% 5%;
   background-color: rgba(23, 185, 170, 255);
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
   border-radius: 20px 30px 0px 20px;
-  padding: 1.5% 2.5% 1% 2.5%;
   color: rgba(255, 255, 255, 255);
   font-size: 80%;
   font-weight: bold;
   font-family: Georgia, serif;
+
+}
+
+.client-message{
+  width: 100%; 
+  height: 100%;
+  margin-right: 2%;
+  text-align: right;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .client-logo-div {
@@ -38,28 +52,30 @@
   border-radius: 8px;
 }
 
-.client-message{
-  margin-right: 1%;
-}
-
 .chatbot-message-container {
   display: flex;
   width: fit-content;
-  max-width: 90%;
+  max-width: 80%;
+  text-wrap: wrap;
+  margin-top: 5%;
   margin-left: 1.5%;
   background-color: rgba(227, 232, 241, 255);
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
   border-radius: 30px 20px 20px 0px;
-  padding: 1.5% 2.5% 1% 2.5%;
   color: rgba(255, 255, 255, 255);
   font-size: 80%;
   font-weight: bold;
   font-family: Georgia, serif;
   color: black;
+  white-space: nowrap;
+  padding: 1.5% 5% 1.5% 3%;
 }
 
 .bot-logo {
   display: flex;
+  margin-top: auto;
+  width: 30px;
+  height: 30px;
   justify-content: center;
   align-items: center;
   margin: 5px;
@@ -69,7 +85,20 @@
   border-radius: 8px;
 }
 
+.client-logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 5px;
+  padding: 1% 1.5% 1% 1.5%;
+  margin-right: 10px;
+  background-color:grey;
+  border-radius: 8px;
+}
+
+
 .bot-message{
   margin-left: 1%;
   width: fit-content;
+  text-wrap: wrap;
 }
