--- a/src/components/chatbot/components/header/index.css
+++ b/src/components/chatbot/components/header/index.css
@@ -189,3 +189,37 @@
     }
 
   }
+
+.search-bar {
+  width: 100%;
+  margin-top: 0%;
+  display: flex;
+  align-items: center;
+  padding-bottom: 3%;
+  background-color: #ffffff;
+  border-bottom: 1px solid #e0e0e0;
+}
+
+.search-bar input {
+  flex: 1;
+  margin: 0px 0px 0px 6% ;
+  padding: 8px;
+  width: 40%;
+  border: 1px solid #e0e0e0;
+  border-radius: 4px;   
+  margin-right: 8px;
+}
+
+.search-navigation {
+  display: flex;
+  margin-right: 6%;
+}
+
+.search-navigation svg {
+  cursor: pointer;
+}
+
+.close-search-icon {
+  margin: 0% 6% 0% 0%;
+  cursor: pointer;
+}
