--- a/src/components/chatbot/components/body/index.css
+++ b/src/components/chatbot/components/body/index.css
@@ -15,7 +15,7 @@ chat-app {
   padding: 16px; 
   display: flex;
   flex-direction: column;
-  background-color: #f5f7fa; 
+  background-color: #e9ebef; 
   overflow-y: auto; 
   scrollbar-width: none; 
 }
@@ -35,7 +35,7 @@ chat-app {
   max-width: 80%;
   padding: 8px 12px; 
   background-color: #17b9aa; 
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1); 
+  box-shadow: 5px 5px 2px rgba(0, 0, 0, 0.1); 
   border-radius: 12px 12px 0 12px; 
   color: white;
   font-size: 14px;
@@ -69,7 +69,7 @@ chat-app {
   margin-left: 8px;
   padding: 8px 12px; 
   background-color: #ffffff; 
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1); 
+  box-shadow: 5px 5px 2px rgba(0, 0, 0, 0.1); 
   border-radius: 12px 12px 12px 0; 
   color: #333;
   font-size: 14px;
