--- a/src/components/chatbot/components/body/index.css
+++ b/src/components/chatbot/components/body/index.css
@@ -17,6 +17,7 @@ chat-app {
   flex-direction: column;
   background-color: #e9ebef; 
   overflow-y: auto; 
+  overflow-x: hidden;
   scrollbar-width: none; 
 }
 
@@ -188,7 +189,6 @@ chat-app {
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 20px;
 }
 
 .bar-chart-container,
@@ -197,4 +197,23 @@ chat-app {
   background: rgba(255, 255, 255, 0.1);
   border-radius: 8px;
   padding: 10px;
+}
+
+.pie-chart-container {
+  height: 300px; 
+}
+
+.recharts-legend-wrapper {
+  padding-top: 10px; 
+}
+.recharts-legend-item {
+  margin-right: 16px; 
+}
+
+.recharts-surface {
+  overflow: visible;
+}
+
+.recharts-sector {
+  stroke: none; 
 }
