--- a/src/components/admin-panel/components/query-history/index.css
+++ b/src/components/admin-panel/components/query-history/index.css
@@ -1,7 +1,28 @@
+*{
+    overflow: hidden;
+}
 .query-history-container {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    border: 1px solid #000;
+    padding-bottom: 2%;
 }
+
+.query-history-container table {
+    width: 80%;
+    border-collapse: collapse;
+    height: 80%;
+    margin-top: 2%;
+}
+
+.query-history-container table th,
+.query-history-container table td {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+
