--- a/src/components/admin-panel/components/data-upload/index.css
+++ b/src/components/admin-panel/components/data-upload/index.css
@@ -2,6 +2,46 @@
     width: 100%;
     height: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: start;
     align-items: start;
 }
+
+.options-bar-container{
+    width: 100%;
+    height: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.option{
+    width:20%;
+    margin:0 2% 0 2%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 25%;
+    background-color: #f0f0f0;
+    color:black;
+    cursor: pointer;
+    border-radius: 10px;
+}
+
+.option:hover{
+    background-color: #d0d0d0;
+}
+
+.data-upload-options-container{
+    width: 100%;
+    height: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.icon{
+    width: 10% ;
+    height: 50%;
+}
+
