--- a/src/components/admin-panel/index.css
+++ b/src/components/admin-panel/index.css
@@ -1,10 +1,20 @@
 .admin-panel-container{
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex;
-    justify-content: start;
-    align-items: start;
 }
+
+.admin-panel-sidebar {
+    width: 250px;
+    flex-shrink: 0;
+}
+
+.admin-panel-content {
+    flex: 1;
+    height: 100vh;
+    overflow-y: auto;
+}
+
 .cards-container{
     width: 100%;
     height: 100vh;
