--- a/src/components/admin-panel/components/query-history/index.css
+++ b/src/components/admin-panel/components/query-history/index.css
@@ -83,6 +83,10 @@
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
+.query-history-container table tbody{
+    overflow-y: scroll;
+}
+
 .query-history-container table th {
     padding: 16px 12px;
     text-align: left;
@@ -119,6 +123,7 @@
 .query-history-container table tr:hover {
     background-color: #f9f5ff;
     transform: translateY(-1px);
+    cursor: pointer;
     box-shadow: 0 4px 8px rgba(142, 112, 171, 0.1);
 }
 
@@ -327,7 +332,7 @@
 .bubble-chart-container,
 .pie-chart-container,
 .bar-chart-container {
-    width: 95%;
+    width: 100% !important;
     margin-top: 2%;
     height: 70%;
     background: white;
